# TinyLlava-Gemma3-SigLIP2-1.4B

./: .gitattributes  .gitignore  README.md  environment.yml  extract_loss.py  hugging_face_upload.py  modeling_tinyllava_llama.py  pyproject.toml  setup.sh  simply_inference.py  wandb.py
checkpoints/llava_factory/tiny-llava-gemma-3-1b-pt-siglip2-so400m-patch14-384-gemma3_pretrain_dual5090_v1-finetune/: config.json  log.txt  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors.index.json  tokenizer_config.json  trainer_state.json
scripts/: convert_vqav2_questions_to_llava.py
scripts/eval/: vqav2.sh  vqav2_microllama.sh
scripts/eval/vlmeval/: README.md  compare_template.json  gemmallava_local.json  gemmallava_mmbench_test_en_v11.json
scripts/infer/: gemma3_cli.sh  gemma3_gradio.sh
scripts/train/: finetune.sh  pretrain.sh  train_microllama.sh
scripts/train/gemma3/: common.sh  finetune_gemma3.sh  pretrain_gemma3.sh  train_gemma3_base.sh  verify_local_setup.py
tinyllava/data/template/: formatter.py  gemma3_micro_template.py  gemma3_template.py
tinyllava/eval/: eval_vqav2.py  eval_vqav2_llm_judge.py  model_vqa_loader.py  run_tiny_llava.py
tinyllava/model/: configuration_tinyllava.py  load_model.py  modeling_tinyllava.py
tinyllava/model/llm/: __init__.py  gemma.py
tinyllava/model/vision_tower/: __init__.py  siglip.py
tinyllava/serve/: app.py  cli.py
tinyllava/train/: tinyllava_trainer.py  train.py
tinyllava/utils/: logging.py  train_utils.py
